--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas ta-lib
   - source activate test-environment
   - python setup.py install
 
@@ -35,3 +35,4 @@ script: nosetests
 addons:
   apt_packages:
     - pandoc
+    - ta-lib
