--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas ta-lib
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas
   - source activate test-environment
+  - pip install ta-lib # Python TA-Lib wrapper
   - python setup.py install
 
 # command to run tests
