trying to fix travis build error

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ addons:
     - pandoc
     - ta-lib
 
+before_install:
+  - wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
+  - tar -xvzf ta-lib-0.4.0-src.tar.gz
+  - cd ta-lib/ && ./configure --prefix=/usr LDFLAGS="-lm" && make && sudo make install && cd .. && rm -r ta-lib
+
 # command to install dependencies
 install:
   - sudo apt-get update
